sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
 typedef uint64_t SimulationTime;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT void ERS_Serializer_SaveToArchive(void* modelContainerInstance, const char* archivePath, int compressionLevel);
    ERS_IMPORT void* ERS_Serializer_LoadFromArchive(const char* archivePath, bool useCache);
    ERS_IMPORT void ERS_Serializer_ClearArchiveCache(const char* archivePath);
    ERS_IMPORT void ERS_Serializer_SerializeValueUInt64(void* serializerHandle, size_t index, uint64_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueInt64(void* serializerHandle, size_t index, int64_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueUInt32(void* serializerHandle, size_t index, uint32_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueInt32(void* serializerHandle, size_t index, int32_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueDouble(void* serializerHandle, size_t index, double* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueBool(void* serializerHandle, size_t index, bool* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueFloat(void* serializerHandle, size_t index, float* value);
    ERS_IMPORT void ERS_Serializer_SerializeValueString(void* serializerHandle, size_t index, char** value, int* length);
    ERS_IMPORT void ERS_Serializer_PushArrayElement(void* serializerHandle, size_t index, int* size);
    ERS_IMPORT void ERS_Serializer_PushObjectElement(void* serializerHandle, size_t index);
    ERS_IMPORT int ERS_PathSegment_GetType(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetFromX(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetFromY(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetFromZ(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetToX(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetToY(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetToZ(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetCenterX(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetCenterY(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetCenterZ(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetRadius(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetBeginAngle(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetEndAngle(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetEndZ(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP0X(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP0Y(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP0Z(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP1X(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP1Y(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP1Z(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP2X(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP2Y(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP2Z(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP3X(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP3Y(void* instance);
    ERS_IMPORT float ERS_PathSegment_GetP3Z(void* instance);
    ERS_IMPORT void ERS_PathSegment_GetPointAlongPath(void* instance, float t, float* vec3out);
    ERS_IMPORT void ERS_PathSegment_GetRotationAlongPath(void* instance, float t, float* vec3out);
    ERS_IMPORT void ERS_Random_Generator_Set_Seed(void* generator, size_t seed);
    ERS_IMPORT double ERS_Random_Generator_Sample(void* generator);
    ERS_IMPORT void ERS_Random_Generator_Reset(void* generator);
    ERS_IMPORT int ERS_Random_Generator_GetType(void* generator);
    ERS_IMPORT void ERS_Profiler_StartSession();
    ERS_IMPORT void ERS_Profiler_PrintResults();
    ERS_IMPORT void ERS_String_Destroy(void* str);
    ERS_IMPORT void* ERS_ThreadLocal_GetSubModel();
    ERS_IMPORT void* ERS_ThreadLocal_GetSubModelOrNull();
    ERS_IMPORT bool ERS_ThreadLocal_InsideSubModel();
    ERS_IMPORT void ERS_ThreadLocal_EnterSubModel(void* submodel);
    ERS_IMPORT void ERS_ThreadLocal_ExitSubModel();
    ERS_IMPORT void* ERS_ThreadLocal_GetCurrentSyncEvent();
    ERS_IMPORT bool ERS_ThreadLocal_IsInsideSyncEvent();
    ERS_IMPORT int32_t ERS_ThreadLocal_GetSyncEventTarget();
    ERS_IMPORT int32_t ERS_ThreadLocal_GetSyncEventSender();
    ERS_IMPORT void* ERS_ModelContainer_Create();
    ERS_IMPORT void ERS_ModelContainer_Release(void* instance);
    ERS_IMPORT void ERS_ModelContainer_Increase(void* instance);
    ERS_IMPORT size_t ERS_ModelContainer_GetSimulatorsCount(const void* modelContainerInstance);
    ERS_IMPORT void* ERS_ModelContainer_GetSimulator(void* modelContainerInstance, int index);
    ERS_IMPORT void* ERS_ModelContainer_GetSimulatorById(void* modelContainerInstance, const int32_t simulatorId);
    ERS_IMPORT void* ERS_ModelContainer_AddSimulator(void* modelContainerInstance, const char* tag, const uint8_t simulatorType);
    ERS_IMPORT void ERS_ModelContainer_RemoveSimulator(void* modelContainerInstance, void* coreSimulator);
    ERS_IMPORT SimulationTime ERS_ModelContainer_CurrentTime(const void* modelContainerInstance);
    ERS_IMPORT void ERS_ModelContainer_Update_Blocking(void* modelContainerInstance, SimulationTime timeStep);
    ERS_IMPORT double ERS_ModelContainer_SimulationSpeedOverRealtime(void* modelContainerInstance);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));