sources/CSharp/src/ErsApiFunctions.cs


        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_Serializer_SaveToArchive(IntPtr modelContainerInstance, /* ASCII String */ byte* archivePath, int compressionLevel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_Serializer_LoadFromArchive(/* ASCII String */ byte* archivePath, [MarshalAs(UnmanagedType.I1)] bool useCache);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_Serializer_ClearArchiveCache(/* ASCII String */ byte* archivePath);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_SerializeValueUInt64(IntPtr serializerHandle, nuint index, IntPtr value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_SerializeValueInt64(IntPtr serializerHandle, nuint index, IntPtr value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_SerializeValueUInt32(IntPtr serializerHandle, nuint index, IntPtr value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_SerializeValueInt32(IntPtr serializerHandle, nuint index, IntPtr value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_SerializeValueDouble(IntPtr serializerHandle, nuint index, IntPtr value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_Serializer_SerializeValueBool(IntPtr serializerHandle, nuint index, bool* value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_SerializeValueFloat(IntPtr serializerHandle, nuint index, IntPtr value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_Serializer_SerializeValueString(IntPtr serializerHandle, nuint index, /* ASCII String */ byte* value, ref int length);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_PushArrayElement(IntPtr serializerHandle, nuint index, ref int size);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Serializer_PushObjectElement(IntPtr serializerHandle, nuint index);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_PathSegment_GetType(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetFromX(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetFromY(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetFromZ(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetToX(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetToY(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetToZ(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetCenterX(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetCenterY(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetCenterZ(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetRadius(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetBeginAngle(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetEndAngle(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetEndZ(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP0X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP0Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP0Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP1X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP1Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP1Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP2X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP2Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP2Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP3X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP3Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_PathSegment_GetP3Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathSegment_GetPointAlongPath(IntPtr instance, float t, IntPtr vec3out);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathSegment_GetRotationAlongPath(IntPtr instance, float t, IntPtr vec3out);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Random_Generator_Set_Seed(IntPtr generator, nuint seed);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern double ERS_Random_Generator_Sample(IntPtr generator);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Random_Generator_Reset(IntPtr generator);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_Random_Generator_GetType(IntPtr generator);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Profiler_StartSession();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Profiler_PrintResults();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_String_Destroy(IntPtr str);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ThreadLocal_GetSubModel();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ThreadLocal_GetSubModelOrNull();

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ThreadLocal_InsideSubModel();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ThreadLocal_EnterSubModel(IntPtr submodel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ThreadLocal_ExitSubModel();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ThreadLocal_GetCurrentSyncEvent();

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ThreadLocal_IsInsideSyncEvent();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 ERS_ThreadLocal_GetSyncEventTarget();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 ERS_ThreadLocal_GetSyncEventSender();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelContainer_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_Release(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_Increase(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_ModelContainer_GetSimulatorsCount(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelContainer_GetSimulator(IntPtr modelContainerInstance, int index);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelContainer_GetSimulatorById(IntPtr modelContainerInstance, Int32 simulatorId);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_ModelContainer_AddSimulator(IntPtr modelContainerInstance, /* ASCII String */ byte* tag, byte simulatorType);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_RemoveSimulator(IntPtr modelContainerInstance, IntPtr coreSimulator);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern SimulationTime ERS_ModelContainer_CurrentTime(IntPtr modelContainerInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainer_Update_Blocking(IntPtr modelContainerInstance, SimulationTime timeStep);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern double ERS_ModelContainer_SimulationSpeedOverRealtime(IntPtr modelContainerInstance);
